[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "arvpuan"
version = "1.0.0"
description = "Kart puan sorgulama kutuphanesi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["card", "checker", "points"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/arvpuan"
Repository = "https://github.com/YOUR_USERNAME/arvpuan"

[tool.setuptools.packages.find]
where = ["."]
include = ["arvpuan*"]
