[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arvpuanv1"
version = "1.0.2"
description = "Kart puan sorgulama kutuphanesi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["card", "checker", "points"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[project.urls]
Homepage   = "https://github.com/uysfaarvm/arvpuanv1"
Repository = "https://github.com/uysfaarvm/arvpuanv1"

[tool.setuptools.packages.find]
where = ["."]
include = ["arvpuanv1*"]
