[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datautils-helper"
version = "1.0.0"
description = "Utility library for data processing and management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["data", "utils", "helper", "processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/uysfaarvm/arvpuanv1"

[tool.setuptools.packages.find]
where = ["."]
include = ["arvpuanv1*", "pyarmor_runtime_000000*"]
